--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
+    "bootstrap": "^4.1.0",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
     "enum": "^2.5.0",
